Fixed midpart of problem

--- a/hw4/4705_fa24_hw4.ipynb
+++ b/hw4/4705_fa24_hw4.ipynb
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 261,
    "id": "69c2dcc0",
    "metadata": {},
    "outputs": [
@@ -752,36 +752,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[36, 51, 15, 15, 15, 15, 10, 15, 15,  0, 10, 15, 15, 30, 19, 19, 32, 32,\n",
-      "         30, 32, 32, 30, 32, 32, 32, 32, 32, 32, 32, 32, 32, 30,  0, 30, 41, 36,\n",
-      "         32, 45, 10, 32, 45, 32, 32, 45, 32, 32, 45, 30, 32, 32, 32, 32, 32, 32,\n",
-      "         32, 32, 32, 32, 30, 15,  0, 30, 41, 36, 32, 10, 36, 32, 45, 10, 32, 32,\n",
-      "         32, 32, 10, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 30, 15,\n",
-      "         32, 47, 36, 45, 10,  9, 15, 45, 45, 32, 32, 32, 32, 32, 32, 32, 45, 32,\n",
-      "         32, 32, 32, 32, 32, 32, 32, 15, 30, 30, 32, 32, 30, 32, 32, 32, 10, 32,\n",
-      "         32, 32]], device='cuda:0')\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_10969/862671486.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtok_preds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cpu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mtok_preds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mid_to_role\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtok_preds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 0"
+      "['I-ARGM-ADV', 'I-ARGM-LVB', 'B-ARGM-DIS', 'B-ARGM-DIS', 'B-ARGM-DIS', 'B-ARGM-DIS', 'B-ARG4', 'B-ARGM-DIS', 'B-ARGM-DIS', 'O', 'B-ARG4', 'B-ARGM-DIS', 'B-ARGM-DIS', 'I-ARG1', 'B-ARGM-MNR', 'B-ARGM-MNR', 'I-ARG2', 'I-ARG2', 'I-ARG1', 'I-ARG2', 'I-ARG2', 'I-ARG1', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG1', 'O', 'I-ARG1', 'I-ARGM-GOL', 'I-ARGM-ADV', 'I-ARG2', 'I-ARGM-NEG', 'B-ARG4', 'I-ARG2', 'I-ARGM-NEG', 'I-ARG2', 'I-ARG2', 'I-ARGM-NEG', 'I-ARG2', 'I-ARG2', 'I-ARGM-NEG', 'I-ARG1', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG1', 'B-ARGM-DIS', 'O', 'I-ARG1', 'I-ARGM-GOL', 'I-ARGM-ADV', 'I-ARG2', 'B-ARG4', 'I-ARGM-ADV', 'I-ARG2', 'I-ARGM-NEG', 'B-ARG4', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'B-ARG4', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG1', 'B-ARGM-DIS', 'I-ARG2', 'I-ARGM-PRP', 'I-ARGM-ADV', 'I-ARGM-NEG', 'B-ARG4', 'B-ARG3', 'B-ARGM-DIS', 'I-ARGM-NEG', 'I-ARGM-NEG', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARGM-NEG', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'B-ARGM-DIS', 'I-ARG1', 'I-ARG1', 'I-ARG2', 'I-ARG2', 'I-ARG1', 'I-ARG2', 'I-ARG2', 'I-ARG2', 'B-ARG4', 'I-ARG2', 'I-ARG2', 'I-ARG2']\n"
      ]
     }
    ],
    "source": [
     "# Get predictions by taking argmax along the class dimension\n",
     "predictions = torch.argmax(outputs, dim=1)  # Shape will be [1, 128]\n",
-    "print(predictions)\n",
     "\n",
     "tok_preds = []\n",
     "for ix, n in enumerate(predictions.to('cpu').tolist()[0]):\n",
-    "    tok_preds.append(id_to_role[n])\n",
+    "    if n not in id_to_role:\n",
+    "        tok_preds.append('O')\n",
+    "    else:\n",
+    "        tok_preds.append(id_to_role[n])\n",
     "\n",
     "print(tok_preds)"
    ]
